Changed collapse div to span to correct new line issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,14 +133,6 @@
   text-shadow: 0 0 3px #000;
 }
 
-/* .testimonial-body a.collapsed:after {
-  content: '... More';
-}
-
-.testimonial-body a:not(.collapsed):after {
-  content: '... More';
-} */
-
 /* ================================== */
 /* FOOTER */
 
